[package]
name = "offchain-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Solana DEX arbitrage bot with offchain execution and Jito MEV protection"

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Solana dependencies (SDK v3)
solana-program = "3"
solana-sdk = "3"
solana-rpc-client = "3"
solana-rpc-client-api = "3"
solana-transaction-status = "3"
solana-system-interface = { version = "2", features = ["bincode"] }
solana-commitment-config = "3"
solana-message = "3"

# SPL interface crates for SDK v3
spl-token-interface = "2"
spl-associated-token-account-interface = "2"

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Math and calculations
rust_decimal = { version = "1.35", features = ["serde", "std"] }
num-traits = "0.2"

# Logging and monitoring
env_logger = "0.11"
log = "0.4"

# Additional utilities
async-trait = "0.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
hex = "0.4"
rand = "0.8"
base64 = "0.21"
bincode = "1.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Cryptography
aes = "0.8"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
ed25519-dalek = "=1.0.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "offchain-bot"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
